--- a/styles/App.css
+++ b/styles/App.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 
-/* Styles app elements */
+/* Style app elements */
 .App {
   font-family: sans-serif;
   text-align: center;
