Add custom useBoard hook

--- a/styles/Menu.css
+++ b/styles/Menu.css
@@ -7,7 +7,7 @@
   z-index: 100;
 }
 
-/* Style start button on the menu */
+/* Style the start button on the menu */
 .start-button {
   font-size: 36px;
   border: none;
