--- a/styles/Board.css
+++ b/styles/Board.css
@@ -4,7 +4,7 @@
   grid-gap: 2px;
   width: 40vw;
   height: 86vh;
-  background: rgb(32, 0, 64);
+  background-color: rgb(32, 0, 64);
   margin: 2em auto;
   border: 10px solid rgb(32, 0, 64);
   border-radius: 10px;
