--- a/styles/Preview.css
+++ b/styles/Preview.css
@@ -1,10 +1,10 @@
-/* Style the tetromino preview */
+/* Style a tetromino preview */
 .Preview {
   position: absolute;
   top: 0;
   left: 75vw;
-  background-color: rgba(0, 0, 0, 0, 0.1);
-  border: 10px solid rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 8px solid rgba(0, 0, 0, 0);
   border-radius: 10px;
 }
 
