--- a/styles/BoardCell.css
+++ b/styles/BoardCell.css
@@ -1,25 +1,26 @@
 /* Style a cell on the game board */
 .BoardCell {
   width: auto;
-  border-radius: 6px;
+  border-radius: 8px;
   position: relative;
 }
 
 /* Style a tetromino */
 .Tetromino {
-  border-top: 3px solid rgba(255, 255, 255, 0.1);
-  border-left: 3px solid rgba(255, 255, 255, 0.1);
-  border-right: 3px solid rgba(255, 255, 255, 0.1);
-  border-bottom: 3px solid rgba(255, 255, 255, 0.1);
+  border-top: 4px solid rgba(255, 255, 255, 0.1);
+  border-left: 4px solid rgba(255, 255, 255, 0.1);
+  border-right: 4px solid rgba(255, 255, 255, 0.1);
+  border-bottom: 4px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid black;
 }
 
-/* Style a shiny tetromino */
+/* Style a tetromino with a shiny part */
 .Tetromino .Shine {
   position: absolute;
-  width: 6px;
-  height: 6px;
-  top: -2px;
-  left: -2px;
+  width: 7px;
+  height: 7px;
+  top: 2px;
+  left: 2px;
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 4px 4px;
   z-index: 10;
@@ -38,23 +39,23 @@
 
 /* Style the individual tetromino shapes */
 .Tetromino_i {
-  background-color: rgba(80, 227, 230, 1);
+  background-color: #00ffff;
 }
 .Tetromino_j {
-  background-color: rgba(36, 95, 223, 1);
+  background-color: #0000ff;
 }
 .Tetromino_l {
-  background-color: rgba(223, 173, 36, 1);
+  background-color: #ff7f00;
 }
 .Tetromino_o {
-  background-color: rgba(223, 217, 36, 1);
+  background-color: #ffff00;
 }
 .Tetromino_s {
-  background-color: rgba(48, 211, 56, 1);
+  background-color: #00ff00;
 }
 .Tetromino_t {
-  background-color: rgba(132, 61, 198, 1);
+  background-color: #8e5eff;
 }
 .Tetromino_z {
-  background-color: rgba(240, 80, 195, 1);
+  background-color: #ff0000;
 }
