--- a/styles/Controls.css
+++ b/styles/Controls.css
@@ -2,7 +2,7 @@
 .Controls {
   position: absolute;
   top: 40px;
-  left: 372px;
+  left: 25.4vw;
   text-align: left;
   list-style-type: none;
   color: rgba(0, 0, 0, 0.9);
@@ -13,7 +13,7 @@
 
 /* Style the controls text box */
 .Controls-Text {
-  left: 364px;
+  left: 24.95vw;
   top: 5px;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(0, 0, 0, 0);
