--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -9,6 +9,8 @@
 
 /* Style the start button on the menu */
 .start-button {
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   font-size: 36px;
   border: none;
   border-radius: 20px;
