--- a/src/styles/GameStats.css
+++ b/src/styles/GameStats.css
@@ -21,7 +21,6 @@
 
 /* Style all values in the game stats display */
 .GameStats .Value {
-  font-size: 2.8rem;
-  margin-bottom: 0.2em;
+  font-size: 40px;
   color: rgba(0, 0, 0, 0.9);
 }
